<resources>
    <string name="app_name">TIM</string>
    <string name="app_name_mean">Trash Industry Marketing</string>

    <string name="email_or_mobile_login">Email / Mobile</string>
    <string name="password_login">Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">SignUp</string>
    <string name="forget_password_button"><u>Forget Password</u></string>
    <string name="user_type">User</string>
    <string name="company_type">Company</string>
    <string name="register_name_hint">Enter name</string>
    <string name="register_user_name_hint">Enter username</string>
    <string name="register_email_hint">Enter email</string>
    <string name="register_mobile_hint">Enter Mobile</string>
    <string name="register_select_city_hint">Select City</string>
    <string name="register_password">Enter Password</string>
    <string name="register_confirm_password">Enter Confirm Password</string>
    <string name="nav_tool_bar_sell_item">Sell Item</string>
    <string name="home_categories">Categories</string>
    <string name="home_most_popular">Most popular</string>

    <string name="add_item_take_photos">take photos</string>

    <!---->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_message">Type message</string>
    <string name="enter_email">Enter Email</string>
    <string name="reset_password">Reset password</string>
    <string name="enter_code">Enter Code</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="categories">Categories</string>
    <string name="mostPopular">Most Popular</string>
    <string name="fab">Replace with your own action</string>
    <string name="action">Action</string>
    <string name="appNotFound">App Not found on the market yet</string>
    <string name="recomndationMessage">Let me recommend you this application</string>
    <string name="chooseOne">choose one</string>
    <string name="negtiable">is negotiable</string>
    <string name="notNegtiable">is not negotiable</string>
    <string name="thisYourItem">this is your own ad item</string>
    <string name="item_name">item name</string>
    <string name="item_description">item Description</string>
    <string name="item_price">item Price</string>
    <string name="item_is_negotiable">Item Is Negotiable</string>
    <string name="item_owner_phone_number">Item Owner Phone Number</string>
    <string name="phone_number">phone number</string>
    <string name="invalidData">invalid data</string>
    <string name="allowCameraPermission">please allow the camera / storage permission</string>
    <string name="successEdit">Success Edit</string>
    <string name="chooseCity">Choose your City</string>
    <string name="selectFile">Select File</string>
    <string name="enable_edit_profile_info">Enable Edit Profile Info</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enter_name">Enter name</string>
    <string name="no_items_found">No Items Found</string>
    <string name="your_phone">your phone</string>
    <string name="item_category">Item Category</string>
    <string name="item_sub_category">Item Sub Category</string>
    <string name="item_city">Item City</string>
    <string name="is_negotiable">is negotiable</string>
    <string name="select_language">Select Language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="germeny">Germeny</string>
    <string name="french">French</string>
    <string name="my_profile">My Profile</string>
    <string name="sell_item">Sell Item</string>
    <string name="user_items">User Items</string>
    <string name="settings">Settings</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="inbox">Inbox</string>
    <string name="logout">Logout</string>
    <string name="country_name">country name</string>
    <string name="select_image">Select Image</string>
    <string name="category">category</string>
    <string name="delete">Delete</string>
    <string name="sub_category">sub - category</string>
    <string name="checkPermission">check permissions</string>
    <string name="cameraPermission">camera permission and storage</string>
    <string name="chooseItemSubCategory">Choose your Item Sub-Category</string>
</resources>
