<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_categories"
            android:title="@string/categories" />
        <item
            android:id="@+id/nav_profile"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/nav_sell_item"
            android:title="@string/sell_item" />
        <item
            android:id="@+id/nav_user_item"
            android:title="@string/user_items" />

        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="@string/share_app" />
            <item
                android:id="@+id/nav_rate"
                android:title="@string/rate_app" />
            <item
                android:id="@+id/nav_inbox"
                android:title="@string/inbox" />
            <item
                android:id="@+id/nav_logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
