<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context=".views.settings.SettingsActivity">

    <TextView
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/select_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    </TextView>
    <Button
        android:textColor="@color/colorWhite"
        android:background="#000"
        android:layout_margin="30dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/button_language_ar"
        android:text="@string/arabic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Button>

    <Button
        android:textColor="@color/colorWhite"
        android:background="#000"
        android:layout_margin="30dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/button_language_en"
        android:text="@string/english"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Button>
    <Button
        android:textColor="@color/colorWhite"
        android:background="#000"
        android:layout_margin="30dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/button_language_gr"
        android:text="@string/germeny"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Button>
    <Button
        android:textColor="@color/colorWhite"
        android:background="#000"
        android:layout_margin="30dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/button_language_fr"
        android:text="@string/french"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Button>
</LinearLayout>