<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context=".views.forget_password.ResetPasswordActivity">

    <EditText
        android:id="@+id/edit_code"
        android:hint="@string/enter_code"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edit_new_password"
        android:hint="@string/enter_new_password"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progress_reset_with_code"
       android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       />
    <Button
        android:id="@+id/button_reset_new_pass"
        android:textColor="@color/colorWhite"
        android:background="@color/colorBlack"
        android:layout_margin="20dp"
        android:text="@string/reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>