<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_registeration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/register_back"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#40000000"
        >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >


<!--            <ImageView-->
<!--                android:src="@drawable/user_image"-->
<!--                android:layout_gravity="center"-->
<!--                android:id="@+id/imageView_user_image"-->
<!--                android:layout_width="120dp"-->
<!--                android:layout_height="120dp"-->
<!--                android:adjustViewBounds="true"-->
<!--                android:scaleType="centerCrop" />-->

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/imageView_user_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:gravity="center"

                android:src="@drawable/profile_image"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"/>

            <RadioGroup
                android:layout_margin="20dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:text="@string/user_type"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:padding="4dp"
                    android:id="@+id/radio_user"
                    />


                <androidx.appcompat.widget.AppCompatRadioButton
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/company_type"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:padding="4dp"
                    android:id="@+id/radio_company"
                    />

            </RadioGroup>


            <com.google.android.material.textfield.TextInputLayout
                android:textColorHint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_marginBottom="5dp"
                    android:textColorHint="@color/colorWhite"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:id="@+id/name_register_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_name_hint"
                    />


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:textColorHint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_marginBottom="5dp"
                    android:textColorHint="@color/colorWhite"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:id="@+id/username_register_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_user_name_hint" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:textColorHint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_marginBottom="5dp"
                    android:textColorHint="@color/colorWhite"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:id="@+id/password_register_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_password"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:textColorHint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:id="@+id/input_layout_confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_marginBottom="5dp"
                    android:textColorHint="@color/colorWhite"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:id="@+id/confirm_password_edit_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_confirm_password"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:textColorHint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:id="@+id/input_layout_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_marginBottom="5dp"
                    android:textColorHint="@color/colorWhite"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:id="@+id/email_register_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_email_hint"
                    android:inputType="textEmailAddress"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:textColorHint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:id="@+id/input_layout_Phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_marginBottom="5dp"
                    android:textColorHint="@color/colorWhite"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:id="@+id/phone_register_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_mobile_hint"
                    android:inputType="phone"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:background="@color/colorBlack"
                android:layout_marginBottom="5dp"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:focusableInTouchMode="true"
                android:id="@+id/city_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_select_city_hint"
                />
            <ProgressBar
                android:visibility="invisible"
                android:id="@+id/progress_register"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button

                android:background="#000"
                android:textColorHint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:layout_margin="20dp"
                android:layout_marginBottom="20dp"
                android:id="@+id/register_register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_button"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                />
        </LinearLayout>

    </ScrollView>
</LinearLayout>
</LinearLayout>
